--- a/writing/hr-resource-stoch.bib
+++ b/writing/hr-resource-stoch.bib
@@ -3035,13 +3035,6 @@
 	langid = {english},
 }
 
-@book{wickham_dplyr_2022,
-	title = {dplyr: A Grammar of Data Manipulation},
-	url = {https://CRAN.R-project.org/package=dplyr},
-	author = {Wickham, Hadley and François, Romain and Henry, Lionel and Müller, Kirill},
-	date = {2022},
-}
-
 @article{pebesma_simple_2018,
 	title = {Simple Features for R: Standardized Support for Spatial Vector Data},
 	volume = {10},
@@ -3456,13 +3449,6 @@
 	urldate = {2022-03-21},
 	date = {2008-04},
 	langid = {english},
-}
-
-@book{hijmans_terra_2023,
-	title = {terra: Spatial Data Analysis},
-	url = {https://CRAN.R-project.org/package=terra},
-	author = {Hijmans, Robert J.},
-	date = {2023},
 }
 
 @article{fieberg_kernel_2007,
@@ -4893,13 +4879,6 @@ Version Number: 1},
 	file = {Accepted Version:C\:\\Users\\stefa\\Zotero\\storage\\6YQ7S3X9\\Samarra et al. - 2017 - Movements and site fidelity of killer whales (Orci.pdf:application/pdf},
 }
 
-@book{wilke_cowplot_2020,
-	title = {cowplot: Streamlined Plot Theme and Plot Annotations for 'ggplot2'},
-	url = {https://CRAN.R-project.org/package=cowplot},
-	author = {Wilke, Claus O.},
-	date = {2020},
-}
-
 @book{wickham_ggplot2_2016,
 	title = {ggplot2: Elegant Graphics for Data Analysis},
 	isbn = {978-3-319-24277-4},
@@ -4918,20 +4897,6 @@ Version Number: 1},
 	journaltitle = {Journal of Statistical Software},
 	author = {Grolemund, Garrett and Wickham, Hadley},
 	date = {2011},
-}
-
-@book{wickham_tidyr_2022,
-	title = {tidyr: Tidy Messy Data},
-	url = {https://CRAN.R-project.org/package=tidyr},
-	author = {Wickham, Hadley and Girlich, Maximilian},
-	date = {2022},
-}
-
-@book{henry_purrr_2022,
-	title = {purrr: Functional Programming Tools},
-	url = {https://CRAN.R-project.org/package=purrr},
-	author = {Henry, Lionel and Wickham, Hadley},
-	date = {2022},
 }
 
 @article{gurarie_correlated_2017,
@@ -5513,4 +5478,62 @@ Version Number: 1},
 	date = {2020-08},
 	langid = {english},
 	file = {Submitted Version:C\:\\Users\\stefa\\Zotero\\storage\\IBFKAP26\\Martinez-Garcia et al. - 2020 - How range residency and long-range perception chan.pdf:application/pdf},
+}
+
+@book{simpson_gratia_2024,
+	title = {gratia: Graceful ggplot-Based Graphics and Other Functions for {GAMs} Fitted using mgcv},
+	url = {https://gavinsimpson.github.io/gratia/},
+	abstract = {Graceful ggplot-based graphics and utility functions for working with generalized additive models ({GAMs}) fitted using the mgcv package. Provides a reimplementation of the plot() method for {GAMs} that mgcv provides, as well as tidyverse-compatible representations of estimated smooths.},
+	author = {Simpson, Gavin L.},
+	date = {2024},
+}
+
+@book{hijmans_terra_2024,
+	title = {terra: Spatial Data Analysis},
+	url = {https://CRAN.R-project.org/package=terra},
+	author = {Hijmans, Robert J.},
+	date = {2024},
+}
+
+@book{pebesma_spatial_2023,
+	location = {New York},
+	edition = {1},
+	title = {Spatial Data Science: With Applications in R},
+	isbn = {978-0-429-45901-6},
+	url = {https://www.taylorfrancis.com/books/9780429459016},
+	shorttitle = {Spatial Data Science},
+	publisher = {Chapman and Hall/{CRC}},
+	author = {Pebesma, Edzer and Bivand, Roger},
+	urldate = {2024-06-07},
+	date = {2023-05-10},
+	langid = {english},
+	doi = {10.1201/9780429459016},
+}
+
+@book{wickham_dplyr_2023,
+	title = {dplyr: A Grammar of Data Manipulation},
+	url = {https://CRAN.R-project.org/package=dplyr},
+	author = {Wickham, Hadley and Francois, Romain and Henry, Lionel and Muller, Kirill and Vaughan, Davis},
+	date = {2023},
+}
+
+@book{wickham_purrr_2023,
+	title = {purrr: Functional Programming Tools},
+	url = {https://CRAN.R-project.org/package=purrr},
+	author = {Wickham, Hadley and Henry, Lionel},
+	date = {2023},
+}
+
+@book{wickham_tidyr_2024,
+	title = {tidyr: Tidy Messy Data},
+	url = {https://CRAN.R-project.org/package=tidyr},
+	author = {Wickham, Hadley and Vaughan, Davis and Girlich, Maximilian},
+	date = {2024},
+}
+
+@book{wilke_cowplot_2024,
+	title = {cowplot: Streamlined Plot Theme and Plot Annotations for 'ggplot2'},
+	url = {https://CRAN.R-project.org/package=cowplot},
+	author = {Wilke, Claus O.},
+	date = {2024},
 }
